--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,14 @@ kind: "workshop"
 # Overall title for the Workshop.
 # This variable is used to (optionally) add a title in the "jumbotron"
 # (the grey box at the top of the page), and to the extra pages.
+
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
 title: "Introductory Research Data Management with R"
+
+# Email address, no mailto:
+email: "rsginfo@soton.ac.uk"
 
 # Specify the location of the workshop
 # TODO: needs documenting a lot better
@@ -99,9 +103,6 @@ collections:
   episodes:
     output: true
     permalink: /:slug
-  extras:
-    output: true
-    permalink: /:path/index
 collections_dir: collections
 
 include:
@@ -119,25 +120,6 @@ flavor: "python"
 # a lesson in The Carpentries Incubator), set pilot to "true".
 pilot: false
 
-#------------------------------------------------------------
-# Incubator workshop settings (only relevant for workshops teaching a lesson
-# in The Carpentries Incubator).
-#
-# For an Incubator workshop, uncomment the line below and add the URL of the lesson site.
-# incubator_lesson_site: "put the URL of the lesson being taught here"
-#
-# For an Incubator workshop, uncomment the line below and add the URL of your pre-workshop survey
-# incubator_pre_survey: "put the URL of your pre-workshop survey here"
-#
-# For an Incubator workshop, uncomment the line below and add the URL of your post-workshop survey
-# incubator_post_survey: "put the URL of your post-workshop survey here"
-#
-#------------------------------------------------------------
-
-#------------------------------------------------------------
-# Generic settings (should not need to change).
-#------------------------------------------------------------
-
 # rsg: Custom Lessons from the Southampton-RSG-Training git-org
 carpentry: "rsg"
 
@@ -145,12 +127,6 @@ carpentry: "rsg"
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
 repository: <USERNAME>/<PROJECT>
-
-# Email address, no mailto:
-email: "rsginfo@soton.ac.uk"
-
-# Using the new jekyll remote themes
-remote_theme: carpentries/carpentries-theme
 
 # Sites.
 amy_site: "https://amy.carpentries.org/"
@@ -172,10 +148,6 @@ workshop_repo: "https://github.com/carpentries/workshop-template"
 workshop_site: "https://carpentries.github.io/workshop-template"
 cc_by_human: "https://creativecommons.org/licenses/by/4.0/"
 
-# Surveys.
-pre_survey: "https://"
-post_survey: "https://"
-
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
 start_time: 0
 
@@ -196,10 +168,6 @@ defaults:
     values:
       root: ..
       layout: page
-#  - scope:
-#      path: "fig"
-#    values:
-#      image: true
 
 
 # Files and directories that are not to be copied.
@@ -215,5 +183,11 @@ exclude:
 # Turn on built-in syntax highlighting.
 highlighter: rouge
 
+# Using the new jekyll remote themes
+remote_theme: Southampton-RSG-Training/rsg-theme
+
 plugins:
+  - jekyll-remote-theme
   - jekyll-sitemap
+  - jekyll-include-cache
+  - jekyll-target-blank
