--- a/_config.yml
+++ b/_config.yml
@@ -190,6 +190,9 @@ highlighter: rouge
 # Using the new jekyll remote themes
 remote_theme: Southampton-RSG-Training/rsg-theme
 
+github_username:  PipGrylls
+github: PipGrylls
+
 plugins:
   - jekyll-remote-theme
   - jekyll-sitemap
