--- a/_config.yml
+++ b/_config.yml
@@ -190,8 +190,8 @@ highlighter: rouge
 # Using the new jekyll remote themes
 remote_theme: Southampton-RSG-Training/rsg-theme
 
-github_username:  PipGrylls
-github: PipGrylls
+github_username: <USERNAME>
+github: <USERNAME>
 
 plugins:
   - jekyll-remote-theme
